--- a/views/partials/newFile.ejs
+++ b/views/partials/newFile.ejs
@@ -15,7 +15,7 @@
       <input id="folderId" name="folderId" type="hidden" value="<%= folder?.id %>" />
     </div>
       <div class="controls">
-        <button type="submit">Create</button>
+        <button type="submit">Upload</button>
         <button type="reset" class="newFileDivButton">Cancel</button>
       </div>
     </form>
